# opengl_desktop

./: .gitignore  CMakeLists.txt  main.cpp
resources/: cube.mtl  monkey.fbx
resources/breakdance_1990/: breakdance_1990.dae
resources/models/breakdance_1990/: breakdance_1990.bvh
resources/models/shark/: shark.fbx
resources/pigeon/: pigeon3.mtl
resources/shaders/: model_fragment_shader.glsl  model_vertex_shader.glsl  vertex_shader.glsl
resources/skate/: D_SkateJump_.fbx
resources/test/: Y_Bot.fbx
shaders/: fragment_shader.glsl  model_fragment_shader.glsl  model_vertex_shader.glsl  vertex_shader.glsl
src/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Camera.cpp  Camera.h  Program.cpp  Program.h  Skeleton.cpp  Skeleton.h  Texture.cpp  Texture.h  glm_utils.h  glwrapper.h  logs.h  main.cpp  program.cpp  program.h
src/actors/: Actor.cpp  Actor.h  Cube.cpp  Cube.h  Model.cpp  Model.h  ScreenPlane.cpp  ScreenPlane.h
src/shaders/: vertex_shader.glsl
